--- a/history.html
+++ b/history.html
@@ -78,8 +78,8 @@
 							<li><a href="javascript:void(0);" class="fa fa-twitter"></a></li>
 							<li><a href="javascript:void(0);" class="fa fa-linkedin"></a></li>
 							<li><a href="javascript:void(0);" class="fa fa-google-plus"></a></li> -->
-								<li><a href="#" class=" ">第十旅百週年專區 |&nbsp;</a></li>
-								<li><a href="#" class=" ">領袖登入區 |&nbsp;</a></li>
+								<li><a href="#" class=" ">第十旅百週年專區 </a>|&nbsp;</li>
+								<li><a href="#" class=" ">領袖登入區 </a>|&nbsp;</li>
 								<li><a href="#" class=" ">青少年成員登入區</a></li>
 							</ul>
 						</div>
@@ -95,7 +95,7 @@
 
 						<!-- website logo -->
 						<div class="logo-header mostion hkg-logo"><a href="index.html">
-							<img src="images/10thhkg-logo.png" width="193" height="89" alt="">
+							<img src="images/10thhkg-logo.svg" width="193" height="89" alt="">
 						</a></div>
 
 						<!-- nav toggle button -->
@@ -136,257 +136,139 @@
 										<li><a href="#">歷任旅長名單</a></li>
 										<li><a href="#">旅務委員會</a></li>
 										<li><a href="#">領袖</a></li>
-										<li><a href="#">獎項及獎勵</a></li>
+                    <li><a href="#">獎項及獎勵</a></li>
+                    <li><a href="#">相簿</a></li>                    
 									</ul>
 								</li>
 								<li> <a href="javascript:;">小童軍團<i class="fa fa-chevron-down"></i></a>
 									<!-- <li> <a href="javascript:;">Features<i class="fa fa-chevron-down"></i></a> -->
 									<ul class="sub-menu">
-										<li> <a href="javascript:;">Header Style Light</a>
+                    <li><a href="#">介紹</a></li>
+                    <li><a href="#">領袖</a></li>
+                    <li><a href="#">獎項</a></li>
+                    <li><a href="#">相簿</a></li>
+                    <li><a href="#">通告</a></li>
+                    <li><a href="#">小童軍制服</a></li>
+										<li> <a href="javascript:;">小童軍有用資料</a>
 											<ul class="sub-menu">
-												<li><a href="header-style-1.html">Header 1</a></li>
-												<li><a href="header-style-2.html">Header 2</a></li>
-												<li><a href="header-style-3.html">Header 3</a></li>
-												<li><a href="header-style-4.html">Header 4</a></li>
-												<li><a href="header-style-5.html">Header 5</a></li>
-												<li><a href="header-style-6.html">Header 6</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Header Style Dark</a>
-											<ul class="sub-menu">
-												<li><a href="header-style-1-dark.html">Header 1</a></li>
-												<li><a href="header-style-2-dark.html">Header 2</a></li>
-												<li><a href="header-style-3-dark.html">Header 3</a></li>
-												<li><a href="header-style-4-dark.html">Header 4</a></li>
-												<li><a href="header-style-5-dark.html">Header 5</a></li>
-												<li><a href="header-style-6-dark.html">Header 6</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Footer</a>
-											<ul class="sub-menu">
-												<li><a href="footer-1.html">Footer 1 </a></li>
-												<li><a href="footer-2.html">Footer 2</a></li>
-												<li><a href="footer-3.html">Footer 3</a></li>
-												<li><a href="footer-4.html">Footer 4</a></li>
-												<li><a href="footer-5.html">Footer 5</a></li>
+												<li><a href="#">請假連結</a></li>
 											</ul>
 										</li>
 									</ul>
 								</li>
 								<li> <a href="javascript:;">幼童軍團<i class="fa fa-chevron-down"></i></a>
 									<!-- <li> <a href="javascript:;">Pages<i class="fa fa-chevron-down"></i></a> -->
-									<ul class="sub-menu">
-										<li> <a href="javascript:;">About us</a>
-											<ul class="sub-menu">
-												<li><a href="about-1.html">About us 1</a></li>
-												<li><a href="about-2.html">About us 2</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">FAQ</a>
-											<ul class="sub-menu">
-												<li><a href="faq-1.html">FAQ 1</a></li>
-												<li><a href="faq-2.html">FAQ 2</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Services</a>
-											<ul class="sub-menu">
-												<li><a href="services-1.html">Services 1</a></li>
-												<li><a href="services-2.html">Services 2</a></li>
-												<li><a href="services-3.html">Services 3</a></li>
-											</ul>
-										</li>
-										<li><a href="career.html">Career</a></li>
-										<li> <a href="javascript:;">Courses</a>
-											<ul class="sub-menu">
-												<li><a href="courses.html">Courses</a></li>
-												<li><a href="course-details.html">Course Details</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Event</a>
-											<ul class="sub-menu">
-												<li><a href="event.html">Events</a></li>
-												<li><a href="event-details.html">Event Details</a></li>
-											</ul>
-										</li>
-										<li><a href="who-we-are.html">Who we are</a></li>
-										<li><a href="help.html">Help Desk</a></li>
-										<li><a href="privacy-policy.html">Privacy Policy</a></li>
-										<li> <a href="javascript:;">Portfolio</a>
-											<ul class="sub-menu">
-												<li><a href="portfolio-1.html">Portfolio 1</a></li>
-												<li><a href="portfolio-2.html">Portfolio 2</a></li>
-												<li><a href="portfolio-3.html">Portfolio 3</a></li>
-												<li><a href="portfolio-details.html">portfolio-details</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Galley</a>
-											<ul class="sub-menu">
-												<li><a href="full-page-gallery-dark.html">Gallery Full Page Style 1</a>
-												</li>
-												<li><a href="full-page-gallery-light.html">Gallery Full Page Style 2</a>
-												</li>
-												<li><a href="gallery-grid-2.html">Galley Grid 2</a></li>
-												<li><a href="gallery-grid-3.html">Galley Grid 3</a></li>
-												<li><a href="gallery-grid-4.html">Galley Grid 4</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Error</a>
-											<ul class="sub-menu">
-												<li><a href="error-403.html">Error 403</a></li>
-												<li><a href="error-404.html">Error 404</a></li>
-												<li><a href="error-405.html">Error 405</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Coming Soon</a>
-											<ul class="sub-menu">
-												<li><a href="coming-soon-1.html">Coming Soon 1</a></li>
-												<li><a href="coming-soon-2.html">Coming Soon 2</a></li>
-												<li><a href="coming-soon-3.html">Coming Soon 3</a></li>
-												<li><a href="coming-soon-4.html">Coming Soon 4</a></li>
-												<li><a href="coming-soon-5.html">Coming Soon 5</a></li>
-												<li><a href="coming-soon-6.html">Coming Soon 6</a></li>
-												<li><a href="coming-soon-7.html">Coming Soon 7</a></li>
-												<li><a href="coming-soon-8.html">Coming Soon 8</a></li>
-												<li><a href="coming-soon-9.html">Coming Soon 9</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Login Page</a>
-											<ul class="sub-menu">
-												<li><a href="login-1.html">Login 1</a></li>
-												<li><a href="login-2.html">Login 2</a></li>
-												<li><a href="login-3.html">Login 3</a></li>
-												<li><a href="login-4.html">Login 4</a></li>
-												<li><a href="login-5.html">Login 5</a></li>
-												<li><a href="login-6.html">Login 6</a></li>
-											</ul>
-										</li>
-									</ul>
+                    <ul class="sub-menu">
+                        <li><a href="#">介紹</a></li>
+                        <li><a href="#">領袖</a></li>
+                        <li><a href="#">獎項</a></li>
+                        <li><a href="#">相簿</a></li>
+                        <li><a href="#">通告</a></li>
+                        <li><a href="#">幼童軍手册</a></li>
+                        <li><a href="#">小童軍制服</a></li>
+                        <li> <a href="javascript:;">小童軍有用資料</a>
+                          <ul class="sub-menu">
+                            <li><a href="#">請假連結</a></li>
+                            <li><a href="#">善行紀錄表</a></li>
+                          </ul>
+                        </li>
+                      </ul>
 								</li>
 								<li> <a href="javascript:;">童軍團<i class="fa fa-chevron-down"></i></a>
-									<!-- <li> <a href="javascript:;">Shop<i class="fa fa-chevron-down"></i></a> -->
-									<ul class="sub-menu">
-										<li><a href="product.html">Product</a></li>
-										<li><a href="product-details.html">Product details</a></li>
-									</ul>
+                  <ul class="sub-menu">
+                      <li><a href="#">介紹</a></li>
+                      <li><a href="#">領袖</a></li>
+                      <li><a href="#">獎項</a></li>
+                      <li><a href="#">相簿</a></li>
+                      <li><a href="#">通告</a></li>
+                      <li><a href="#">童軍訓練綱要</a></li>
+                      <li> <a href="javascript:;">童軍有用資料</a>
+                        <ul class="sub-menu">
+                          <li><a href="#">童軍支部各級徽章簽發及領取/購買方法</a></li>
+                          <li><a href="#">支部最高獎章標誌</a></li>
+                          <li><a href="#">童軍支部「童軍探索奬章」與幼童軍支部各級徽章豁免考驗安排</a></li>
+                        </ul>
+                      </li>
+                    </ul>
 								</li>
 								<li> <a href="javascript:;">深資童軍團<i class="fa fa-chevron-down"></i></a>
 									<!-- <li> <a href="javascript:;">Blog<i class="fa fa-chevron-down"></i></a> -->
-									<ul class="sub-menu">
-										<li> <a href="javascript:;">Default</a>
-											<ul class="sub-menu">
-												<li><a href="blog-half-img.html">Half image</a></li>
-												<li><a href="blog-half-img-sidebar.html">Half image sidebar</a></li>
-												<li><a href="blog-half-img-left-sidebar.html">Half image sidebar
-														left</a></li>
-												<li><a href="blog-large-img.html">Large image</a></li>
-												<li><a href="blog-large-img-sidebar.html">Large image sidebar</a></li>
-												<li><a href="blog-large-img-left-sidebar.html">Large image sidebar
-														left</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Grid</a>
-											<ul class="sub-menu">
-												<li><a href="blog-grid-2.html">Grid 2</a></li>
-												<li><a href="blog-grid-2-sidebar.html">Grid 2 sidebar</a></li>
-												<li><a href="blog-grid-2-sidebar-left.html">Grid 2 sidebar left</a></li>
-												<li><a href="blog-grid-3.html">Grid 3</a></li>
-												<li><a href="blog-grid-3-sidebar.html">Grid 3 sidebar</a></li>
-												<li><a href="blog-grid-3-sidebar-left.html">Grid 3 sidebar left</a></li>
-												<li><a href="blog-grid-4.html">Grid 4</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Single</a>
-											<ul class="sub-menu">
-												<li><a href="blog-single.html">Single</a></li>
-												<li><a href="blog-single-sidebar.html">Single sidebar</a></li>
-												<li><a href="blog-single-left-sidebar.html">Single sidebar right</a>
-												</li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Full Page Blog</a>
-											<ul class="sub-menu">
-												<li><a href="blog-full-grid-dark-style-1.html">Dark Style 1</a></li>
-												<li><a href="blog-full-grid-dark-style-2.html">Dark Style 2</a></li>
-												<li><a href="blog-full-grid-dark-style-3.html">Dark Style 3</a></li>
-												<li><a href="blog-full-grid-light-style-1.html">Light Style 1</a></li>
-												<li><a href="blog-full-grid-light-style-2.html">Light Style 2</a></li>
-												<li><a href="blog-full-grid-light-style-3.html">Light Style 3</a></li>
-											</ul>
-										</li>
-									</ul>
+                    <ul class="sub-menu">
+                        <li><a href="#">介紹</a></li>
+                        <li><a href="#">領袖</a></li>
+                        <li><a href="#">獎項</a></li>
+                        <li><a href="#">執行委員會</a></li>
+                        <li><a href="#">相簿</a></li>
+                        <li><a href="#">通告</a></li>
+                        <li><a href="#">深資童軍訓練綱要</a></li>
+                        <li><a href="#">深資童軍有用資料</a></li>
+                    </ul>
+                </li>
+								<li> <a href="javascript:;">樂行童軍團<i class="fa fa-chevron-down"></i></a>
+                    <ul class="sub-menu">
+                        <li><a href="#">介紹</a></li>
+                        <li><a href="#">領袖</a></li>
+                        <li><a href="#">獎項</a></li>
+                        <li><a href="#">管理委員會</a></li>
+                        <li><a href="#">相簿</a></li>
+                        <li><a href="#">通告</a></li>
+                        <li><a href="#">樂行童軍訓練綱要</a></li>
+                        <li><a href="#">樂行童軍有用資料</a></li>
+                    </ul>
 								</li>
-								<li class="has-mega-menu "> <a href="javascript:;">樂行童軍團<i
-											class="fa fa-chevron-down"></i></a>
-									<!-- <li class="has-mega-menu "> <a href="javascript:;">Shortcodes<i class="fa fa-chevron-down"></i></a> -->
+								<li class="has-mega-menu "> <a href="javascript:;">下載區<i class="fa fa-chevron-down"></i></a>
 									<ul class="mega-menu">
-										<li> <a href="javascript:;">Shortcodes</a>
-											<ul>
-												<li><a href="shortcode-buttons.html">Buttons</a></li>
-												<li><a href="shortcode-icon-box-styles.html">Icon box styles</a></li>
-												<li><a href="shortcode-pricing-table.html">Pricing table</a></li>
-												<li><a href="shortcode-toggles.html">Toggles</a></li>
-												<li><a href="shortcode-team.html">Team</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Shortcodes</a>
-											<ul>
-												<li><a href="shortcode-carousel-sliders.html">Carousel sliders</a></li>
-												<li><a href="shortcode-image-box-content.html">Image box content</a>
-												</li>
-												<li><a href="shortcode-tabs.html">Tabs</a></li>
-												<li><a href="shortcode-counters.html">Counters</a></li>
-												<li><a href="shortcode-all-widgets.html">Widgets</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Shortcodes</a>
-											<ul>
-												<li><a href="shortcode-accordians.html">Accordians</a></li>
-												<li><a href="shortcode-dividers.html">Dividers</a></li>
-												<li><a href="shortcode-images-effects.html">Images effects</a></li>
-												<li><a href="shortcode-testimonials.html">Testimonials</a></li>
-												<li><a href="shortcode-all-widgets.html">Widgets</a></li>
-											</ul>
-										</li>
-										<li> <a href="javascript:;">Shortcodes</a>
-											<ul>
-												<li><a href="shortcode-alert-box.html">Alert box</a></li>
-												<li><a href="shortcode-icon-box.html">Icon-box</a></li>
-												<li><a href="shortcode-list-group.html">List group</a></li>
-												<li><a href="shortcode-title-separators.html">title-separators</a></li>
-												<li><a href="shortcode-all-widgets.html">Widgets</a></li>
-											</ul>
-										</li>
-									</ul>
-								</li>
-								<li> <a href="javascript:;">下載區<i class="fa fa-chevron-down"></i></a>
-									<!-- <li> <a href="javascript:;">Contact us <i class="fa fa-chevron-down"></i></a> -->
-									<ul class="sub-menu">
-										<li><a href="contact.html">Contact us 1</a></li>
-										<li><a href="contact-2.html">Contact us 2</a></li>
-										<li><a href="contact-3.html">Contact us 3</a></li>
-										<li><a href="contact-4.html">Contact us 4</a></li>
-									</ul>
+                      <li> <a href="javascript:;">報名表 & 同意書</a>
+                        <ul>
+                          <li><a href="#">活動/訓練班報名表</a></li>
+                          <li><a href="#">家長同意書</a></li>
+                        </ul>
+                      </li>
+                      <li> <a href="javascript:;">通知書</a>
+                        <ul>
+                            <li><a href="#">金紫荊獎章開展通知書</a></li>
+                          </ul>
+                      </li>
+                      <li> <a href="javascript:;">申請表</a>
+                        <ul>
+                            <li><a href="#">金紫荊獎章及證書申請表</a></li>
+                            <li><a href="#">童軍專科徽章/獎章考驗申請表</a></li>
+                            <li><a href="#">總領袖獎章及證書申請表</a></li>
+                            <li><a href="#">深資童軍獎章及證書申請表</a></li>
+                            <li><a href="#">榮譽童軍獎章及證書申請表</a></li>
+                            <li><a href="#">樂行童軍獎章及貝登堡獎章考驗申請</a></li>
+                            <li><a href="#">樂行童軍獎章及證書申請表</a></li>
+                            <li><a href="#">貝登堡獎章及證書申請表</a></li>
+                            <li><a href="#">參加海外活動申請表格</a></li>
+                          </ul>
+                      </li>
+                      <li> <a href="javascript:;">其他</a>
+                        <ul>
+                            <li><a href="#">深資童軍獎章及榮譽童軍獎章考驗計劃</a></li>
+                        </ul>
+                      </li>
+                    </ul>
 								</li>
 								<li> <a href="javascript:;">重要連結<i class="fa fa-chevron-down"></i></a>
-									<!-- <li> <a href="javascript:;">Contact us <i class="fa fa-chevron-down"></i></a> -->
-									<ul class="sub-menu">
-										<li><a href="contact.html">Contact us 1</a></li>
-										<li><a href="contact-2.html">Contact us 2</a></li>
-										<li><a href="contact-3.html">Contact us 3</a></li>
-										<li><a href="contact-4.html">Contact us 4</a></li>
-									</ul>
+                  <ul class="sub-menu">
+                      <li><a href="#">聖保羅書院</a></li>
+                      <li><a href="#">聖保羅書院小學</a></li>
+                      <li><a href="#">香港童軍總會</a></li>
+                      <li><a href="#">香港童軍總會 – 港島地域</a></li>
+                      <li><a href="#">香港童軍總會 – 港島西區</a></li>
+                      <li><a href="#">World Organisation of the Scout Movement</a></li>
+                  </ul>
 								</li>
 								<li> <a href="javascript:;">有用資料 <i class="fa fa-chevron-down"></i></a>
-									<!-- <li> <a href="javascript:;">Contact us <i class="fa fa-chevron-down"></i></a> -->
-									<ul class="sub-menu">
-										<li><a href="contact.html">Contact us 1</a></li>
-										<li><a href="contact-2.html">Contact us 2</a></li>
-										<li><a href="contact-3.html">Contact us 3</a></li>
-										<li><a href="contact-4.html">Contact us 4</a></li>
-									</ul>
+                  <ul class="sub-menu">
+                      <li><a href="#">儀容與制服手册</a></li>
+                      <li><a href="#">惡劣天氣及空氣污染應變措施</a></li>
+                      <li><a href="#">進行童軍先鋒工程活動安全須知</a></li>
+                  </ul>
 								</li>
 							</ul>
 						</div>
+						<!-- main nav -->
 
 					</div>
 				</div>
