fixed header link, information.html

--- a/history.html
+++ b/history.html
@@ -131,13 +131,13 @@
 									<ul class="sub-menu">
 										<li><a href="history.html">歷史</a></li>
 										<!-- <li><a href="index-2.html">home 2</a></li> -->
-										<li><a href="#">旅團資料</a></li>
+										<li><a href="information.html">旅團資料</a></li>
 										<!-- <li><a href="index-3.html">home 3</a></li> -->
-										<li><a href="#">歷任旅長名單</a></li>
-										<li><a href="#">旅務委員會</a></li>
-										<li><a href="#">領袖</a></li>
-                    <li><a href="#">獎項及獎勵</a></li>
-                    <li><a href="#">相簿</a></li>                    
+										<li><a href="history-brigadier.html">歷任旅長名單</a></li>
+										<li><a href="committee.html">旅務委員會</a></li>
+										<li><a href="leader.html">領袖</a></li>
+                    <li><a href="awards-rewards.html">獎項及獎勵</a></li>
+                    <li><a href="gallery.html">相簿</a></li>                    
 									</ul>
 								</li>
 								<li> <a href="javascript:;">小童軍團<i class="fa fa-chevron-down"></i></a>
@@ -282,7 +282,7 @@
         <div class="w3-bnr-inr overlay-black-middle" style="background-image:url(images/history/img-history-bg.jpg);">
             <div class="container">
                 <div class="w3-bnr-inr-entry">
-                    <h1 class="text-white">History</h1>
+                    <h1 class="text-white">歷史</h1>
                 </div>
             </div>
         </div>
