--- a/header.html
+++ b/header.html
@@ -75,8 +75,19 @@
 										<!-- <li><a href="index-3.html">home 3</a></li> -->
 										<li><a href="history-brigadier.html">歷任旅長名單</a></li>
 										<li><a href="committee.html">旅務委員會</a></li>
-										<li><a href="leader.html">領袖</a></li>
-                    <li><a href="awards-rewards.html">獎項及獎勵</a></li>
+                    <li><a href="leader.html">領袖</a></li>
+                    <li> <a href="javascript:;">獎項及獎勵</a>
+                      <ul class="sub-menu">
+                        <li><a href="awards-rewards.html">旅團獎項</a></li>
+                        <li><a href="awards-rewards.html#award1">功績榮譽獎勵</a></li>
+                        <li><a href="#">香港總監高級嘉許、香港總監嘉許</a></li>
+                        <li><a href="#">長期服務獎勵</a></li>
+                        <li><a href="#">感謝狀</a></li>
+                        <li><a href="#">木章</a></li>
+                        <li><a href="#">模範童軍</a></li>
+                        <li><a href="#">支部最高獎勵</a></li>
+                      </ul>
+                    </li>
                     <li><a href="gallery.html">相簿</a></li>                    
 									</ul>
 								</li>
