--- a/leader.html
+++ b/leader.html
@@ -279,7 +279,7 @@
       <div class="w3-bnr-inr overlay-black-middle" style="background-image:url(images/info/img-info-bg.jpg);">
         <div class="container">
           <div class="w3-bnr-inr-entry">
-            <h1 class="text-white">歷任旅長名單</h1>
+            <h1 class="text-white">領袖</h1>
           </div>
         </div>
       </div>
@@ -289,7 +289,7 @@
         <div class="container">
           <ul class="list-inline">
             <li><a href="#">Home</a></li>
-            <li>歷任旅長名單</li>
+            <li>領袖</li>
           </ul>
         </div>
       </div>
@@ -302,13 +302,13 @@
             <!-- Side Bar -->
             <div class="col-md-12">
               <div>
-                <h1 class="m-b20 m-t0 hkg-blue">歷任旅長</h1>
+                <h1 class="m-b20 m-t0 hkg-blue">各團領袖</h1>
                 <div class="w3-separator bg-primary"></div>
                 <!-- Team Section Style 4 -->
                 <div class="p-a30 bg-white m-b30">
                   <!-- <div class="section-head">
-                    <h2 class="text-uppercase">Team Section Style 4</h2>
-                  </div> -->
+                    <h2 class="text-uppercase">各團領袖</h2>
+                  </div>  -->
                   <div class="section-content text-center ">
                     <div class="row">
                       <div class="col-md-3 col-sm-6">
@@ -320,7 +320,8 @@
                           </div>
                           <div class="p-a10">
                             <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
-                            <span class="w3-member-position">1990</span>
+                            <span class="w3-member-position">職級</span>
+                            <div>email@gmail.com</div>
                           </div>
                         </div>
                       </div>
@@ -333,7 +334,8 @@
                           </div>
                           <div class="p-a10">
                             <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
-                            <span class="w3-member-position">1991</span>
+                            <span class="w3-member-position">職級</span>
+                            <div>email@gmail.com</div>
                           </div>
                         </div>
                       </div>
@@ -346,7 +348,8 @@
                           </div>
                           <div class="p-a10 bg-white">
                             <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
-                            <span class="w3-member-position">1992</span>
+                            <span class="w3-member-position">職級</span>
+                            <div>email@gmail.com</div>
                           </div>
                         </div>
                       </div>
@@ -359,7 +362,8 @@
                           </div>
                           <div class="p-a10">
                             <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
-                            <span class="w3-member-position">1993</span>
+                            <span class="w3-member-position">職級</span>
+                            <div>email@gmail.com</div>
                           </div>
                         </div>
                       </div>
@@ -369,9 +373,9 @@
                 <!-- Team Section Style 4 -->
                 <!-- Team Section Style 4 -->
                 <div class="p-a30 bg-white m-b30">
-                    <!-- <div class="section-head">
-                      <h2 class="text-uppercase">Team Section Style 4</h2>
-                    </div> -->
+                    <div class="section-head">
+                      <!-- <h2 class="text-uppercase">各團領袖</h2> -->
+                    </div> 
                     <div class="section-content text-center ">
                       <div class="row">
                         <div class="col-md-3 col-sm-6">
@@ -383,7 +387,8 @@
                             </div>
                             <div class="p-a10">
                               <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
-                              <span class="w3-member-position">1990</span>
+                              <span class="w3-member-position">職級</span>
+                              <div>email@gmail.com</div>
                             </div>
                           </div>
                         </div>
@@ -396,7 +401,8 @@
                             </div>
                             <div class="p-a10">
                               <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
-                              <span class="w3-member-position">1991</span>
+                              <span class="w3-member-position">職級</span>
+                              <div>email@gmail.com</div>
                             </div>
                           </div>
                         </div>
@@ -409,7 +415,8 @@
                             </div>
                             <div class="p-a10 bg-white">
                               <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
-                              <span class="w3-member-position">1992</span>
+                              <span class="w3-member-position">職級</span>
+                              <div>email@gmail.com</div>
                             </div>
                           </div>
                         </div>
@@ -422,7 +429,8 @@
                             </div>
                             <div class="p-a10">
                               <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
-                              <span class="w3-member-position">1993</span>
+                              <span class="w3-member-position">職級</span>
+                              <div>email@gmail.com</div>
                             </div>
                           </div>
                         </div>
