--- a/awards-rewards.html
+++ b/awards-rewards.html
@@ -279,10 +279,10 @@
     <!-- Content -->
     <div class="page-content bg-white">
         <!-- inner page banner -->
-        <div class="w3-bnr-inr overlay-black-middle" style="background-image:url(images/info/img-info-bg.jpg);">
+        <div class="w3-bnr-inr overlay-black-middle" style="background-image:url(images/awards/img-award-bg.jpg);">
             <div class="container">
                 <div class="w3-bnr-inr-entry">
-                    <h1 class="text-white">旅務委員會</h1>
+                    <h1 class="text-white">獎項及獎勵</h1>
                 </div>
             </div>
         </div>
@@ -292,59 +292,135 @@
             <div class="container">
                 <ul class="list-inline">
                     <li><a href="#">Home</a></li>
-                    <li>旅務委員會</li>
+                    <li>獎項及獎勵</li>
                 </ul>
             </div>
         </div>
         <!-- Breadcrumb row END -->
         <!-- contact area -->
-        <div class="content-area">
-            <!-- who we are -->
+        <section class="section-full content-inner">
             <div class="container">
                 <div class="row">
-                    <!-- Side Bar -->
                     <div class="col-md-12">
-                        <div>
-                            <h1 class="m-b20 m-t0 hkg-blue">成員名單</h1>
-                            <div class="w3-separator bg-primary"></div>
-                            <!-- list  -->
-                            <div class="section-content">
-                                <div class="row">
-                                    <div class="col-md-12 text-r-2-4-2">
-                                        <ul class="list-circle">
-                                            <li>黃家豪</li>
-                                            <li>王志孝</li>
-                                            <li>駱泰裕</li>
-                                            <li>蘇佩珊</li>
-                                            <li>韓志豪</li>
-                                            <li>羅嘉菱</li>
-                                            <li>李添睿</li>
-                                            <li>許玉佳</li>
-                                            <li>陳登陽</li>
-                                            <li>齊浩筠</li>
-                                            <li>林宗達</li>
-                                            <li>王炳新</li>
-                                            <li>李湘侑</li>
-                                            <li>沈貞儀</li>
-                                            <li>林惠雯</li>
-                                            <li>劉牧妤</li>
-                                            <li>林千慧</li>
-                                            <li>黃吉軍</li>
-                                            <li>張若沛</li>
-                                            <li>王名仁</li>
-                                            <li>陳玉娟</li>
-                                        </ul>
-                                    </div>
+                        <!-- <h4 class="text-uppercase m-b30">General Questions</h4> -->
+                        <div class="w3-accordion bg-title no-cover faq-block" id="accordion5">
+                            <div class="panel" >
+                                <div class="acod-head">
+                                    <h5 class="acod-title"> 
+                                      <a data-toggle="collapse" href="#award1" data-parent="#accordion5" aria-expanded="false" class="collapsed">
+                                      <!-- <i class="fa fa-globe"></i> Awsome Web Design</a> </h5> -->
+                                      旅團獎項</a>
+                                    </h5>
+                                </div>
+                                <div id="award1" class="acod-body collapse" aria-expanded="false" style="height: 0px;">
+                                    <div class="acod-content">
+                                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla non, velit deleniti excepturi consectetur doloremque nihil sit eos suscipit soluta repudiandae ullam vel in deserunt voluptatem alias, eveniet dolores!
+                                      </div>
                                 </div>
                             </div>
-                            <!-- list  -->
+                            <div class="panel" >
+                                <div class="acod-head">
+                                    <h5 class="acod-title"> 
+                                      <a data-toggle="collapse" href="#award2" class="collapsed" data-parent="#accordion5" aria-expanded="false">
+                                        功績榮譽獎勵
+                                      </a>
+                                    </h5>
+                                </div>
+                                <div id="award2" class="acod-body collapse" aria-expanded="false">
+                                    <div class="acod-content">
+                                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla non, velit deleniti excepturi consectetur doloremque nihil sit eos suscipit soluta repudiandae ullam vel in deserunt voluptatem alias, eveniet dolores!
+                                      </div>
+                                </div>
+                            </div>
+                            <div class="panel" >
+                                <div class="acod-head">
+                                    <h5 class="acod-title"> 
+                                      <a data-toggle="collapse" href="#award3" class="collapsed" data-parent="#accordion5" aria-expanded="false">
+                                        香港總監高級嘉許、香港總監嘉許 
+                                      </a> 
+                                    </h5>
+                                </div>
+                                <div id="award3" class="acod-body collapse" aria-expanded="false">
+                                    <div class="acod-content">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla non, velit deleniti excepturi consectetur doloremque nihil sit eos suscipit soluta repudiandae ullam vel in deserunt voluptatem alias, eveniet dolores!
+                                        </div>
+                                </div>
+                            </div>
+                            <div class="panel">
+                                <div class="acod-head">
+                                    <h5 class="acod-title"> 
+                                      <a data-toggle="collapse" href="#award4" class="collapsed" data-parent="#accordion5" aria-expanded="false">
+                                          長期服務獎勵
+                                      </a> 
+                                    </h5>
+                                </div>
+                                <div id="award4" class="acod-body collapse" aria-expanded="false">
+                                    <div class="acod-content">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla non, velit deleniti excepturi consectetur doloremque nihil sit eos suscipit soluta repudiandae ullam vel in deserunt voluptatem alias, eveniet dolores!
+                                        </div>
+                                </div>
+                            </div>
+                            <div class="panel">
+                                <div class="acod-head">
+                                    <h5 class="acod-title"> 
+                                      <a data-toggle="collapse" href="#award5" class="collapsed" data-parent="#accordion5" aria-expanded="false">
+                                          感謝狀
+                                      </a> 
+                                    </h5>
+                                </div>
+                                <div id="award5" class="acod-body collapse" aria-expanded="false">
+                                    <div class="acod-content">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla non, velit deleniti excepturi consectetur doloremque nihil sit eos suscipit soluta repudiandae ullam vel in deserunt voluptatem alias, eveniet dolores!
+                                        </div>
+                                </div>
+                            </div>
+                            <div class="panel">
+                                <div class="acod-head">
+                                    <h5 class="acod-title"> 
+                                      <a data-toggle="collapse" href="#award6" class="collapsed" data-parent="#accordion5" aria-expanded="false">
+                                          木章
+                                      </a> 
+                                    </h5>
+                                </div>
+                                <div id="award6" class="acod-body collapse" aria-expanded="false">
+                                    <div class="acod-content">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla non, velit deleniti excepturi consectetur doloremque nihil sit eos suscipit soluta repudiandae ullam vel in deserunt voluptatem alias, eveniet dolores!
+                                        </div>
+                                </div>
+                            </div>
+                            <div class="panel">
+                                <div class="acod-head">
+                                    <h5 class="acod-title"> 
+                                      <a data-toggle="collapse" href="#award7" class="collapsed" data-parent="#accordion5" aria-expanded="false">
+                                          模範童軍
+                                      </a> 
+                                    </h5>
+                                </div>
+                                <div id="award7" class="acod-body collapse" aria-expanded="false">
+                                    <div class="acod-content">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla non, velit deleniti excepturi consectetur doloremque nihil sit eos suscipit soluta repudiandae ullam vel in deserunt voluptatem alias, eveniet dolores!
+                                        </div>
+                                </div>
+                            </div>
+                            <div class="panel">
+                                <div class="acod-head">
+                                    <h5 class="acod-title"> 
+                                      <a data-toggle="collapse" href="#award8" class="collapsed" data-parent="#accordion5" aria-expanded="false">
+                                          支部最高獎勵
+                                      </a> 
+                                    </h5>
+                                </div>
+                                <div id="award8" class="acod-body collapse" aria-expanded="false">
+                                    <div class="acod-content">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla non, velit deleniti excepturi consectetur doloremque nihil sit eos suscipit soluta repudiandae ullam vel in deserunt voluptatem alias, eveniet dolores!
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <!-- Side Bar END -->
-                    <!-- Right Bar -->
                 </div>
             </div>
-            <!-- who we are END -->
-        </div>
+        </section>
         <!-- contact area  END -->
     </div>
     <!-- Content END-->
