--- a/header.html
+++ b/header.html
@@ -18,9 +18,9 @@
 							<li><a href="javascript:void(0);" class="fa fa-twitter"></a></li>
 							<li><a href="javascript:void(0);" class="fa fa-linkedin"></a></li>
 							<li><a href="javascript:void(0);" class="fa fa-google-plus"></a></li> -->
-								<li><a href="#" class=" ">第十旅百週年專區 </a>|&nbsp;</li>
-								<li><a href="#" class=" ">領袖登入區 </a>|&nbsp;</li>
-								<li><a href="#" class=" ">青少年成員登入區</a></li>
+								<li><a href="centennial-tenthBrigade.html" class=" ">第十旅百週年專區 </a>|&nbsp;</li>
+								<li><a href="leader-login.html" class=" ">領袖登入區 </a>|&nbsp;</li>
+								<li><a href="youth-login.html" class=" ">青少年成員登入區</a></li>
 							</ul>
 						</div>
 					</div>
@@ -78,14 +78,14 @@
                     <li><a href="leader.html">領袖</a></li>
                     <li> <a href="javascript:;">獎項及獎勵</a>
                       <ul class="sub-menu">
-                        <li><a href="awards-rewards.html">旅團獎項</a></li>
-                        <li><a href="awards-rewards.html#award1">功績榮譽獎勵</a></li>
-                        <li><a href="#">香港總監高級嘉許、香港總監嘉許</a></li>
-                        <li><a href="#">長期服務獎勵</a></li>
-                        <li><a href="#">感謝狀</a></li>
-                        <li><a href="#">木章</a></li>
-                        <li><a href="#">模範童軍</a></li>
-                        <li><a href="#">支部最高獎勵</a></li>
+                        <li><a href="awards-rewards.html#award1">旅團獎項</a></li>
+                        <li><a href="awards-rewards.html#award2">功績榮譽獎勵</a></li>
+                        <li><a href="awards-rewards.html#award3">香港總監高級嘉許、香港總監嘉許</a></li>
+                        <li><a href="awards-rewards.html#award4">長期服務獎勵</a></li>
+                        <li><a href="awards-rewards.html#award5">感謝狀</a></li>
+                        <li><a href="awards-rewards.html#award6">木章</a></li>
+                        <li><a href="awards-rewards.html#award7">模範童軍</a></li>
+                        <li><a href="awards-rewards.html#award8">支部最高獎勵</a></li>
                       </ul>
                     </li>
                     <li><a href="gallery.html">相簿</a></li>                    
@@ -94,15 +94,15 @@
 								<li> <a href="javascript:;">小童軍團<i class="fa fa-chevron-down"></i></a>
 									<!-- <li> <a href="javascript:;">Features<i class="fa fa-chevron-down"></i></a> -->
 									<ul class="sub-menu">
-                    <li><a href="#">介紹</a></li>
-                    <li><a href="#">領袖</a></li>
-                    <li><a href="#">獎項</a></li>
-                    <li><a href="#">相簿</a></li>
-                    <li><a href="#">通告</a></li>
-                    <li><a href="#">小童軍制服</a></li>
+                    <li><a href="young-scouts-intro">介紹</a></li>
+                    <li><a href="young-scouts-leader">領袖</a></li>
+                    <li><a href="young-scouts-awards">獎項</a></li>
+                    <li><a href="young-scouts-gallery">相簿</a></li>
+                    <li><a href="young-scouts-notice">通告</a></li>
+                    <li><a href="young-scouts-uniform">小童軍制服</a></li>
 										<li> <a href="javascript:;">小童軍有用資料</a>
 											<ul class="sub-menu">
-												<li><a href="#">請假連結</a></li>
+												<li><a href="young-scouts-leaveLink">請假連結</a></li>
 											</ul>
 										</li>
 									</ul>
@@ -110,34 +110,34 @@
 								<li> <a href="javascript:;">幼童軍團<i class="fa fa-chevron-down"></i></a>
 									<!-- <li> <a href="javascript:;">Pages<i class="fa fa-chevron-down"></i></a> -->
                     <ul class="sub-menu">
-                        <li><a href="#">介紹</a></li>
-                        <li><a href="#">領袖</a></li>
-                        <li><a href="#">獎項</a></li>
-                        <li><a href="#">相簿</a></li>
-                        <li><a href="#">通告</a></li>
-                        <li><a href="#">幼童軍手册</a></li>
-                        <li><a href="#">小童軍制服</a></li>
+                        <li><a href="cub-scout-intro">介紹</a></li>
+                        <li><a href="cub-scout-leader">領袖</a></li>
+                        <li><a href="cub-scout-awards">獎項</a></li>
+                        <li><a href="cub-scout-gallery">相簿</a></li>
+                        <li><a href="cub-scout-notice">通告</a></li>
+                        <li><a href="cub-scout-manual">幼童軍手册</a></li>
+                        <li><a href="cub-scout-uniform">小童軍制服</a></li>
                         <li> <a href="javascript:;">小童軍有用資料</a>
                           <ul class="sub-menu">
-                            <li><a href="#">請假連結</a></li>
-                            <li><a href="#">善行紀錄表</a></li>
+                            <li><a href="cub-scout-info#info1">請假連結</a></li>
+                            <li><a href="cub-scout-info#info2">善行紀錄表</a></li>
                           </ul>
                         </li>
                       </ul>
 								</li>
 								<li> <a href="javascript:;">童軍團<i class="fa fa-chevron-down"></i></a>
                   <ul class="sub-menu">
-                      <li><a href="#">介紹</a></li>
-                      <li><a href="#">領袖</a></li>
-                      <li><a href="#">獎項</a></li>
-                      <li><a href="#">相簿</a></li>
-                      <li><a href="#">通告</a></li>
-                      <li><a href="#">童軍訓練綱要</a></li>
+                      <li><a href="scout-troop-intro">介紹</a></li>
+                      <li><a href="scout-troop-leader">領袖</a></li>
+                      <li><a href="scout-troop-awards">獎項</a></li>
+                      <li><a href="scout-troop-gallery">相簿</a></li>
+                      <li><a href="scout-troop-notice">通告</a></li>
+                      <li><a href="scout-troop-trainingProgram">童軍訓練綱要</a></li>
                       <li> <a href="javascript:;">童軍有用資料</a>
                         <ul class="sub-menu">
-                          <li><a href="#">童軍支部各級徽章簽發及領取/購買方法</a></li>
-                          <li><a href="#">支部最高獎章標誌</a></li>
-                          <li><a href="#">童軍支部「童軍探索奬章」與幼童軍支部各級徽章豁免考驗安排</a></li>
+                          <li><a href="scout-troop-info#info1">童軍支部各級徽章簽發及領取/購買方法</a></li>
+                          <li><a href="scout-troop-info#info2">支部最高獎章標誌</a></li>
+                          <li><a href="scout-troop-info#info3">童軍支部「童軍探索奬章」與幼童軍支部各級徽章豁免考驗安排</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -145,76 +145,76 @@
 								<li> <a href="javascript:;">深資童軍團<i class="fa fa-chevron-down"></i></a>
 									<!-- <li> <a href="javascript:;">Blog<i class="fa fa-chevron-down"></i></a> -->
                     <ul class="sub-menu">
-                        <li><a href="#">介紹</a></li>
-                        <li><a href="#">領袖</a></li>
-                        <li><a href="#">獎項</a></li>
-                        <li><a href="#">執行委員會</a></li>
-                        <li><a href="#">相簿</a></li>
-                        <li><a href="#">通告</a></li>
-                        <li><a href="#">深資童軍訓練綱要</a></li>
-                        <li><a href="#">深資童軍有用資料</a></li>
+                        <li><a href="senior-scout-intro">介紹</a></li>
+                        <li><a href="senior-scout-leader">領袖</a></li>
+                        <li><a href="senior-scout-awards">獎項</a></li>
+                        <li><a href="senior-scout-committee">執行委員會</a></li>
+                        <li><a href="senior-scout-gallery">相簿</a></li>
+                        <li><a href="senior-scout-notice">通告</a></li>
+                        <li><a href="senior-scout-train">深資童軍訓練綱要</a></li>
+                        <li><a href="senior-scout-info">深資童軍有用資料</a></li>
                     </ul>
                 </li>
 								<li> <a href="javascript:;">樂行童軍團<i class="fa fa-chevron-down"></i></a>
                     <ul class="sub-menu">
-                        <li><a href="#">介紹</a></li>
-                        <li><a href="#">領袖</a></li>
-                        <li><a href="#">獎項</a></li>
-                        <li><a href="#">管理委員會</a></li>
-                        <li><a href="#">相簿</a></li>
-                        <li><a href="#">通告</a></li>
-                        <li><a href="#">樂行童軍訓練綱要</a></li>
-                        <li><a href="#">樂行童軍有用資料</a></li>
+                        <li><a href="rover-scout-intro">介紹</a></li>
+                        <li><a href="rover-scout-leader">領袖</a></li>
+                        <li><a href="rover-scout-awards">獎項</a></li>
+                        <li><a href="rover-scout-committee">管理委員會</a></li>
+                        <li><a href="rover-scout-gallery">相簿</a></li>
+                        <li><a href="rover-scout-notice">通告</a></li>
+                        <li><a href="rover-scout-train">樂行童軍訓練綱要</a></li>
+                        <li><a href="rover-scout-info">樂行童軍有用資料</a></li>
                     </ul>
 								</li>
 								<li class="has-mega-menu "> <a href="javascript:;">下載區<i class="fa fa-chevron-down"></i></a>
 									<ul class="mega-menu">
                       <li> <a href="javascript:;">報名表 & 同意書</a>
                         <ul>
-                          <li><a href="#">活動/訓練班報名表</a></li>
-                          <li><a href="#">家長同意書</a></li>
+                          <li><a href="/event-registration-form.pdf">活動/訓練班報名表</a></li>
+                          <li><a href="/parental-consent.pdf">家長同意書</a></li>
                         </ul>
                       </li>
                       <li> <a href="javascript:;">通知書</a>
                         <ul>
-                            <li><a href="#">金紫荊獎章開展通知書</a></li>
+                            <li><a href="golden-bauhinia-award-notice.pdf">金紫荊獎章開展通知書</a></li>
                           </ul>
                       </li>
                       <li> <a href="javascript:;">申請表</a>
                         <ul>
-                            <li><a href="#">金紫荊獎章及證書申請表</a></li>
-                            <li><a href="#">童軍專科徽章/獎章考驗申請表</a></li>
-                            <li><a href="#">總領袖獎章及證書申請表</a></li>
-                            <li><a href="#">深資童軍獎章及證書申請表</a></li>
-                            <li><a href="#">榮譽童軍獎章及證書申請表</a></li>
-                            <li><a href="#">樂行童軍獎章及貝登堡獎章考驗申請</a></li>
-                            <li><a href="#">樂行童軍獎章及證書申請表</a></li>
-                            <li><a href="#">貝登堡獎章及證書申請表</a></li>
-                            <li><a href="#">參加海外活動申請表格</a></li>
+                            <li><a href="golden-bauhinia-award-form.pdf">金紫荊獎章及證書申請表</a></li>
+                            <li><a href="scout-specialist-badge.pdf">童軍專科徽章/獎章考驗申請表</a></li>
+                            <li><a href="general-leader-medal-and-certificate.pdf">總領袖獎章及證書申請表</a></li>
+                            <li><a href="senior-scout-medal-and-certificate.pdf">深資童軍獎章及證書申請表</a></li>
+                            <li><a href="honor-scout-medal-and-certificate.pdf">榮譽童軍獎章及證書申請表</a></li>
+                            <li><a href="roverScout-and-Baden-medal-and-certificate.pdf">樂行童軍獎章及貝登堡獎章考驗申請</a></li>
+                            <li><a href="rover-scout-medal-and-certificate.pdf">樂行童軍獎章及證書申請表</a></li>
+                            <li><a href="baden-medal-and-certificate.pdf">貝登堡獎章及證書申請表</a></li>
+                            <li><a href="overseas-application-form">參加海外活動申請表格</a></li>
                           </ul>
                       </li>
                       <li> <a href="javascript:;">其他</a>
                         <ul>
-                            <li><a href="#">深資童軍獎章及榮譽童軍獎章考驗計劃</a></li>
+                            <li><a href="seniorScout-honorScout-medal-and-certificate.pdf">深資童軍獎章及榮譽童軍獎章考驗計劃</a></li>
                         </ul>
                       </li>
                     </ul>
 								</li>
 								<li> <a href="javascript:;">重要連結<i class="fa fa-chevron-down"></i></a>
                   <ul class="sub-menu">
-                      <li><a href="#">聖保羅書院</a></li>
-                      <li><a href="#">聖保羅書院小學</a></li>
-                      <li><a href="#">香港童軍總會</a></li>
-                      <li><a href="#">香港童軍總會 – 港島地域</a></li>
-                      <li><a href="#">香港童軍總會 – 港島西區</a></li>
-                      <li><a href="#">World Organisation of the Scout Movement</a></li>
+                      <li><a href="http://www.spc.edu.hk/" target="_blank">聖保羅書院</a></li>
+                      <li><a href="https://www.spc-ps.edu.hk/" target="_blank">聖保羅書院小學</a></li>
+                      <li><a href="https://www.scout.org.hk/chi/" target="_blank">香港童軍總會</a></li>
+                      <li><a href="http://www.hkirscout.org.hk" target="_blank">香港童軍總會 – 港島地域</a></li>
+                      <li><a href="http://group.scout.org.hk/hkw/" target="_blank">香港童軍總會 – 港島西區</a></li>
+                      <li><a href="#" target="_blank">World Organisation of the Scout Movement</a></li>
                   </ul>
 								</li>
 								<li> <a href="javascript:;">有用資料 <i class="fa fa-chevron-down"></i></a>
                   <ul class="sub-menu">
-                      <li><a href="#">儀容與制服手册</a></li>
-                      <li><a href="#">惡劣天氣及空氣污染應變措施</a></li>
-                      <li><a href="#">進行童軍先鋒工程活動安全須知</a></li>
+                      <li><a href="useful-info#info1">儀容與制服手册</a></li>
+                      <li><a href="useful-info#info2">惡劣天氣及空氣污染應變措施</a></li>
+                      <li><a href="useful-info#info3">進行童軍先鋒工程活動安全須知</a></li>
                   </ul>
 								</li>
 							</ul>
